// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireFeatureFlag renders children if flag is set 1`] = `
<div>
  a WIP Feature
</div>
`;

exports[`RequireFeatureFlag renders whenDisabled if flag is not set and whenDisabled is 1`] = `
<div>
  Almost there, this feature is WIP
</div>
`;
